fix: yaml file config

--- a/mcp-toolbox/tools.yaml
+++ b/mcp-toolbox/tools.yaml
@@ -1,7 +1,7 @@
 sources:
   bq-export:
     kind: "bigquery"
-    project: ${GOOGLE_CLOUD_PROJECT}
+    project: "aceti-462716"
 
 tools:
   system_chaos_summary:
