--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 google-adk==1.3.0
-toolbox==1.11.0
 google-cloud-logging==3.12.1
 google-cloud-bigquery==3.34.0
+google-cloud-aiplatform
+google-generativeai
+litellm==1.72.7
+toolbox-core==0.2.1
