--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,13 @@ authors = [
 requires-python = ">=3.10,<3.13"
 
 dependencies = [
-    "google-adk==1.4.1",
-    "toolbox==1.11.0",
+    "google-adk==1.3.0",
     "google-cloud-logging==3.12.1",
     "google-cloud-bigquery==3.34.0",
+    "google-cloud-aiplatform",
+    "google-generativeai",
+    "litellm==1.72.7",
+    "toolbox-core==0.2.1"
 ]
 
 [project.optional-dependencies]
