--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -48,16 +48,24 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "1MB",
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "8kb",
+                  "maximumError": "16kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": true,
+              "sourceMap": false,
+              "extractLicenses": true,
+              "allowedCommonJsDependencies": [
+                "@supabase/supabase-js",
+                "@supabase/realtime-js",
+                "ws"
+              ]
             },
             "development": {
               "optimization": false,
