--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "@angular/ssr": "^19.2.12",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/marked": "^5.0.2",
     "express": "^4.18.2",
+    "marked": "^15.0.12",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.0",
