--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,8 @@
 name = "chaos-pilot"
 version = "0.1.0"
 description = "Autonomous DevOps Agent using Google ADK"
+readme = "README.md"
+license = { text = "MIT" }
 authors = [
     { name = "Philip Mutua", email = "pmutua@live.com" },
 ]
@@ -11,12 +13,11 @@ dependencies = [
     "google-adk==1.3.0",
     "google-cloud-logging==3.12.1",
     "google-cloud-bigquery==3.34.0",
-    "google-cloud-aiplatform",
-    "google-generativeai",
+    "google-cloud-aiplatform==1.44.0",
+    "google-generativeai==0.4.1",
     "litellm==1.72.7",
     "toolbox-core==0.2.1",
     "python-dotenv==1.1.0",
-
 ]
 
 [project.optional-dependencies]
@@ -27,50 +28,3 @@ lint = [
     "types-pyyaml~=6.0.12.20240917",
     "types-requests~=2.32.0.20240914",
 ]
-
-[dependency-groups]
-dev = []
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["agent_manager"]
-
-[tool.ruff]
-line-length = 88
-target-version = "py310"
-
-[tool.ruff.lint]
-select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
-ignore = ["E501", "C901"]
-
-[tool.ruff.lint.isort]
-known-first-party = []
-
-[tool.mypy]
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-no_implicit_optional = true
-check_untyped_defs = true
-disallow_subclassing_any = true
-warn_incomplete_stub = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_unreachable = true
-follow_imports = "silent"
-ignore_missing_imports = true
-explicit_package_bases = true
-disable_error_code = ["misc", "no-untyped-call", "no-any-return"]
-exclude = [".venv"]
-
-[tool.codespell]
-ignore-words-list = "rouge"
-skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"
-
-[tool.pytest.ini_options]
-pythonpath = "."
-asyncio_default_fixture_loop_scope = "function"
-
